# myfirstvst

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Source/: Filter.h  Lfo.h  NoiseGenerator.h  Oscillator.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SynthSound.h  SynthVoice.cpp  SynthVoice.h
